--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
+    "remixicon": "^2.5.0",
     "sass": "^1.59.3",
     "svelte": "^3.54.0",
     "svelte-carousel": "^1.0.23",
